--- a/workflow.yaml
+++ b/workflow.yaml
@@ -1,7 +1,7 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: updatedfetch 
+  name: Dynamic picker example
   title: Dynamic Picker Example
   description: A template to test GitSync variables
 spec:
